Finished styling for HTML elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1> Rock Paper Scissors </h1>
+    <p class="status">First to 5 points wins!</p>
+    <div class="points">
+        <p class="point" id="player"> Player: 0</p>
+        <p class="point" id="computer"> Player: 0</p>    
+    </div>
+    <div class="container">
+        <button class="square" id="rock">🪨</button>
+        <button class="square" id="paper">📄</button>
+        <button class="square" id="scissors">✌️</button>    
+    </div>
 </body>
 </html>
