--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,5 +18,9 @@
         <button class="square" id="paper">📄</button>
         <button class="square" id="scissors">✌️</button>    
     </div>
+    <div class="endContainer">
+        <button class="playAgain"> Play Again? </button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
